# tts-to-srt-app

./: .gitignore  Dockerfile  README.md  app.py  compose.yml  pyproject.toml  requirements.txt  test.ipynb
